--- a/app/version.properties
+++ b/app/version.properties
@@ -1,5 +1,5 @@
-#Mon Sep 30 01:06:02 SGT 2024
+#Mon Sep 30 11:42:13 CST 2024
 MAJOR=1
 MINOR=1
-PATCH=12
-VERSION_CODE=112
+PATCH=15
+VERSION_CODE=115
