--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.SST"
         tools:targetApi="31">
         <activity
+            android:name=".services.accounting.accounting_service_7"
+            android:exported="false" />
+        <activity
+            android:name=".services.accounting.accounting_service_6"
+            android:exported="false" />
+        <activity
             android:name=".services.accounting.accounting_service_5"
             android:exported="false" />
         <activity
