--- a/app/version.properties
+++ b/app/version.properties
@@ -1,5 +1,5 @@
-#Thu Oct 10 16:45:59 CST 2024
+#Thu Oct 10 18:50:01 SGT 2024
 MAJOR=1
-MINOR=2
-PATCH=97
-VERSION_CODE=297
+MINOR=3
+PATCH=22
+VERSION_CODE=322
