refine postscreen layout

--- a/app/version.properties
+++ b/app/version.properties
@@ -1,5 +1,5 @@
-#Thu Oct 10 18:50:01 SGT 2024
+#Fri Oct 11 14:58:43 CST 2024
 MAJOR=1
 MINOR=3
-PATCH=22
-VERSION_CODE=322
+PATCH=70
+VERSION_CODE=370
