--- a/app/version.properties
+++ b/app/version.properties
@@ -1,5 +1,5 @@
-#Fri Oct 11 16:57:21 CST 2024
+#Sun Oct 13 16:04:39 SGT 2024
 MAJOR=1
-MINOR=3
-PATCH=97
-VERSION_CODE=397
+MINOR=4
+PATCH=12
+VERSION_CODE=412
