--- a/app/version.properties
+++ b/app/version.properties
@@ -1,5 +1,5 @@
-#Sun Oct 13 16:04:39 SGT 2024
+#Mon Oct 14 16:11:33 CST 2024
 MAJOR=1
 MINOR=4
-PATCH=12
-VERSION_CODE=412
+PATCH=23
+VERSION_CODE=423
