--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,36 @@
         android:theme="@style/Theme.SST"
         tools:targetApi="31">
         <activity
+            android:name=".office.MunicipalBusinessProcessingAndLicensingOffice"
+            android:exported="false" />
+        <activity
+            android:name=".services.bplo.bplo_service_6"
+            android:exported="false" />
+        <activity
+            android:name=".services.bplo.bplo_service_5"
+            android:exported="false" />
+        <activity
+            android:name=".services.bplo.bplo_service_4"
+            android:exported="false" />
+        <activity
+            android:name=".services.bplo.bplo_service_3"
+            android:exported="false" />
+        <activity
+            android:name=".services.bplo.bplo_service_2"
+            android:exported="false" />
+        <activity
+            android:name=".services.bplo.bplo_service_1"
+            android:exported="false" />
+        <activity
+            android:name=".services.budget.budget_service_2"
+            android:exported="false" />
+        <activity
+            android:name=".services.budget.budget_service_1"
+            android:exported="false" />
+        <activity
+            android:name=".office.MunicipalBudgetOffice"
+            android:exported="false" />
+        <activity
             android:name=".services.assessor.assessor_service_13"
             android:exported="false" />
         <activity
