--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,24 @@
         android:theme="@style/Theme.SST"
         tools:targetApi="31">
         <activity
+            android:name=".office.MDRRMO"
+            android:exported="false" />
+        <activity
+            android:name=".services.mdrrmo.internal_external.mdrrmo_in_ex_service_4"
+            android:exported="false" />
+        <activity
+            android:name=".services.mdrrmo.internal_external.mdrrmo_in_ex_service_3"
+            android:exported="false" />
+        <activity
+            android:name=".services.mdrrmo.internal_external.mdrrmo_in_ex_service_2"
+            android:exported="false" />
+        <activity
+            android:name=".services.mdrrmo.internal_external.mdrrmo_in_ex_service_1"
+            android:exported="false" />
+        <activity
+            android:name=".services.mdrrmo.external.mdrrmo_ex_service_1"
+            android:exported="false" />
+        <activity
             android:name=".office.MunicipalCivilRegistryOffice"
             android:exported="false" />
         <activity
