--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.SST"
         tools:targetApi="31">
         <activity
+            android:name=".office.MunicipalEngineeringOffice"
+            android:exported="false" />
+        <activity
+            android:name=".services.engineering.engineering_service_2"
+            android:exported="false" />
+        <activity
+            android:name=".services.engineering.engineering_service_1"
+            android:exported="false" />
+        <activity
             android:name=".office.MDRRMO"
             android:exported="false" />
         <activity
