--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,28 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.SST"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".office.HumanResourceManagementOffice"
+            android:exported="false" />
+        <activity
+            android:name=".services.hrmo.internal_external.hrmo_int_ext_service_2"
+            android:exported="false" />
+        <activity
+            android:name=".services.hrmo.internal_external.hrmo_int_ext_service_1"
+            android:exported="false" />
+        <activity
+            android:name=".services.hrmo.internal.hrmo_int_service_4"
+            android:exported="false" />
+        <activity
+            android:name=".services.hrmo.internal.hrmo_int_service_3"
+            android:exported="false" />
+        <activity
+            android:name=".services.hrmo.internal.hrmo_int_service_2"
+            android:exported="false" />
+        <activity
+            android:name=".services.hrmo.internal.hrmo_int_service_1"
+            android:exported="false" />
         <activity
             android:name=".office.MunicipalHealthOffice"
             android:exported="false" />
@@ -240,7 +261,7 @@
         <activity
             android:name=".postScreen"
             android:exported="true"
-            android:theme="@style/Theme.AnimatedSplash.MySplash">
+            android:theme="@style/Theme.AnimatedSplash.MySplash" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
