--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.SST"
         tools:targetApi="31">
         <activity
+            android:name=".office.BidsAndAwardsCommittee"
+            android:exported="false" />
+        <activity
+            android:name=".services.bac.bac_service_3"
+            android:exported="false" />
+        <activity
+            android:name=".services.bac.bac_service_2"
+            android:exported="false" />
+        <activity
+            android:name=".services.bac.bac_service_1"
+            android:exported="false" />
+        <activity
             android:name=".office.MunicipalMayorOffice"
             android:exported="false" />
         <activity
