--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,24 @@
         android:theme="@style/Theme.SST"
         tools:targetApi="31">
         <activity
+            android:name=".services.ipmr.ipmr_service_5"
+            android:exported="false" />
+        <activity
+            android:name=".office.IPMR"
+            android:exported="false" />
+        <activity
+            android:name=".services.ipmr.ipmr_service_4"
+            android:exported="false" />
+        <activity
+            android:name=".services.ipmr.ipmr_service_3"
+            android:exported="false" />
+        <activity
+            android:name=".services.ipmr.ipmr_service_2"
+            android:exported="false" />
+        <activity
+            android:name=".services.ipmr.ipmr_service_1"
+            android:exported="false" />
+        <activity
             android:name=".office.BidsAndAwardsCommittee"
             android:exported="false" />
         <activity
