--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.SST"
         tools:targetApi="31">
         <activity
+            android:name=".office.LEDIPO"
+            android:exported="false" />
+        <activity
+            android:name=".services.ledipo.internal.ledipo_in_service_1"
+            android:exported="false" />
+        <activity
+            android:name=".services.ledipo.external.ledipo_ex_service_1"
+            android:exported="false" />
+        <activity
+            android:name=".office.LIGA"
+            android:exported="false" />
+        <activity
+            android:name=".services.liga.liga_service_1"
+            android:exported="false" />
+        <activity
             android:name=".office.KitaotaoWaterSystem"
             android:exported="false" />
         <activity
