--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,24 @@
         android:theme="@style/Theme.SST"
         tools:targetApi="31">
         <activity
+            android:name=".office.TOURISM"
+            android:exported="false" />
+        <activity
+            android:name=".services.toursim.tourism_in_ex_service_1"
+            android:exported="false" />
+        <activity
+            android:name=".services.toursim.tourism_in_service_1"
+            android:exported="false" />
+        <activity
+            android:name=".office.LYDO"
+            android:exported="false" />
+        <activity
+            android:name=".services.lydo.lydo_service_2"
+            android:exported="false" />
+        <activity
+            android:name=".services.lydo.lydo_service_1"
+            android:exported="false" />
+        <activity
             android:name=".office.LEDIPO"
             android:exported="false" />
         <activity
