--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -11,15 +11,30 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.SST"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".services.peso.peso_service_3"
+            android:exported="false" />
+        <activity
+            android:name=".services.peso.peso_service_2"
+            android:exported="false" />
+        <activity
+            android:name=".services.peso.peso_service_1"
+            android:exported="false" />
+        <activity
+            android:name=".office.PWD"
+            android:exported="false" />
+        <activity
+            android:name=".services.pwd.pwd_service_1"
+            android:exported="false" />
         <activity
             android:name=".office.TOURISM"
             android:exported="false" />
         <activity
-            android:name=".services.toursim.tourism_in_ex_service_1"
+            android:name=".services.tourism.tourism_in_ex_service_1"
             android:exported="false" />
         <activity
-            android:name=".services.toursim.tourism_in_service_1"
+            android:name=".services.tourism.tourism_in_service_1"
             android:exported="false" />
         <activity
             android:name=".office.LYDO"
@@ -345,7 +360,7 @@
         <activity
             android:name=".postScreen"
             android:exported="true"
-            android:theme="@style/Theme.AnimatedSplash.MySplash">
+            android:theme="@style/Theme.AnimatedSplash.MySplash" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
