--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.SST"
         tools:targetApi="31">
         <activity
+            android:name=".office.POPDEV"
+            android:exported="false" />
+        <activity
+            android:name=".services.popdev.popdev_in_ex_service_1"
+            android:exported="false" />
+        <activity
+            android:name=".services.popdev.popdev_ex_service_1"
+            android:exported="false" />
+        <activity
             android:name=".office.MPDO"
             android:exported="false" />
         <activity
