--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.SST"
         tools:targetApi="31">
         <activity
+            android:name=".office.SBO"
+            android:exported="false" />
+        <activity
+            android:name=".services.sbo.sbo_service_1"
+            android:exported="false" />
+        <activity
             android:name=".office.POPDEV"
             android:exported="false" />
         <activity
