--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,33 @@
         android:theme="@style/Theme.SST"
         tools:targetApi="31">
         <activity
+            android:name=".office.MSWDO"
+            android:exported="false" />
+        <activity
+            android:name=".services.mswdo.mswdo_service_8"
+            android:exported="false" />
+        <activity
+            android:name=".services.mswdo.mswdo_service_7"
+            android:exported="false" />
+        <activity
+            android:name=".services.mswdo.mswdo_service_6"
+            android:exported="false" />
+        <activity
+            android:name=".services.mswdo.mswdo_service_5"
+            android:exported="false" />
+        <activity
+            android:name=".services.mswdo.mswdo_service_4"
+            android:exported="false" />
+        <activity
+            android:name=".services.mswdo.mswdo_service_3"
+            android:exported="false" />
+        <activity
+            android:name=".services.mswdo.mswdo_service_2"
+            android:exported="false" />
+        <activity
+            android:name=".services.mswdo.mswdo_service_1"
+            android:exported="false" />
+        <activity
             android:name=".office.SBO"
             android:exported="false" />
         <activity
