--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,10 @@ multiwaveheader = "1.0.0-andx"
 multiWaveHeaderVersion = "3.0.1"
 navigationFragmentKtx = "2.8.0"
 navigationUiKtx = "2.8.0"
+preference = "1.2.0"
+gridlayout = "1.0.0"
+leanback = "1.0.0"
+glide = "4.11.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -33,6 +37,10 @@ androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navi
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
 multi-wave-header = { module = "com.scwang.wave:multi-wave-header", version.ref = "multiWaveHeaderVersion" }
 multiwaveheader = { module = "com.scwang.wave:MultiWaveHeader", version.ref = "multiwaveheader" }
+androidx-preference = { group = "androidx.preference", name = "preference", version.ref = "preference" }
+androidx-gridlayout = { group = "androidx.gridlayout", name = "gridlayout", version.ref = "gridlayout" }
+androidx-leanback = { group = "androidx.leanback", name = "leanback", version.ref = "leanback" }
+glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
