--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,9 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.SST"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <receiver
+            android:name=".MyDeviceAdminReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.device_admin"
+                android:resource="@xml/device_admin" />
+            <intent-filter>
+                <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
+            </intent-filter>
+        </receiver>
         <activity
-            android:name=".MainActivity2"
+            android:name=".CardAdapter"
             android:exported="false" />
         <activity
             android:name=".office.TREASURER"
@@ -483,7 +494,7 @@
         <activity
             android:name=".postScreen"
             android:exported="true"
-            android:theme="@style/Theme.AnimatedSplash.MySplash" >
+            android:theme="@style/Theme.AnimatedSplash.MySplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
