added mto, completed until mto services 1-2, fix layout design up till assessor service 4

--- a/app/version.properties
+++ b/app/version.properties
@@ -1,5 +1,5 @@
-#Thu Dec 05 23:01:25 SGT 2024
-MAJOR=1
-MINOR=9
-PATCH=75
-VERSION_CODE=1123
+#Fri Dec 06 10:47:24 CST 2024
+MAJOR=2
+MINOR=0
+PATCH=9
+VERSION_CODE=2008
