added mto, completed until mto services 1-2, fix layout design up till assessor service 4

--- a/app/version.properties
+++ b/app/version.properties
@@ -1,5 +1,5 @@
-#Fri Dec 06 16:49:30 CST 2024
+#Fri Dec 06 22:00:42 SGT 2024
 MAJOR=2
-MINOR=0
-VERSION_CODE=2087
-PATCH=88
+MINOR=1
+PATCH=61
+VERSION_CODE=2160
