--- a/app/version.properties
+++ b/app/version.properties
@@ -1,5 +1,5 @@
-#Sun Dec 08 20:27:59 SGT 2024
+#Mon Dec 09 10:04:57 PST 2024
 MAJOR=2
 MINOR=4
-PATCH=33
-VERSION_CODE=2432
+PATCH=75
+VERSION_CODE=2474
