--- a/app/version.properties
+++ b/app/version.properties
@@ -1,5 +1,5 @@
-#Mon Dec 09 14:05:53 PST 2024
+#Mon Dec 09 22:51:46 SGT 2024
 MAJOR=2
 MINOR=4
-PATCH=81
-VERSION_CODE=2480
+PATCH=84
+VERSION_CODE=2483
