added hr, magro, liga, peso logo, change Municipal Business Processing and Licensing Office to Municipal Business Permit and Licensing Office

--- a/app/version.properties
+++ b/app/version.properties
@@ -1,5 +1,5 @@
-#Mon Dec 09 22:51:46 SGT 2024
+#Tue Dec 10 10:15:36 PST 2024
 MAJOR=2
 MINOR=4
-PATCH=84
-VERSION_CODE=2483
+PATCH=86
+VERSION_CODE=2485
