--- a/app/version.properties
+++ b/app/version.properties
@@ -1,5 +1,5 @@
-#Tue Dec 10 16:47:48 PST 2024
+#Tue Dec 10 20:15:43 SGT 2024
 MAJOR=2
 MINOR=5
-PATCH=0
-VERSION_CODE=2499
+PATCH=14
+VERSION_CODE=2513
