add christmas theme header

--- a/app/version.properties
+++ b/app/version.properties
@@ -1,5 +1,5 @@
-#Tue Dec 17 17:00:57 PST 2024
+#Tue Dec 17 21:34:39 SGT 2024
 MAJOR=2
-MINOR=5
-PATCH=59
-VERSION_CODE=2558
+MINOR=6
+PATCH=12
+VERSION_CODE=2611
