added tourism and gso map, and map overlay to the office(temp image)

--- a/app/version.properties
+++ b/app/version.properties
@@ -1,5 +1,5 @@
-#Wed Dec 18 17:00:35 PST 2024
+#Wed Dec 18 22:12:56 SGT 2024
 MAJOR=2
-MINOR=7
-PATCH=29
-VERSION_CODE=2728
+MINOR=8
+PATCH=30
+VERSION_CODE=2829
