Added all maps location of offices outside the municipal hall

--- a/app/version.properties
+++ b/app/version.properties
@@ -1,5 +1,5 @@
-#Wed Dec 18 22:12:56 SGT 2024
+#Thu Dec 19 16:14:57 PST 2024
 MAJOR=2
-MINOR=8
-PATCH=30
-VERSION_CODE=2829
+MINOR=9
+PATCH=81
+VERSION_CODE=2980
