Added polyline to these offices IPMR, Water System, LEDIPO, LIGA, LYDO, MDRRMO, MENRO, ADMIN, GSO, HEALTH, PWD, SBO, SENIOR, AND TOURISM.
fix some minor bugs

--- a/app/version.properties
+++ b/app/version.properties
@@ -1,5 +1,5 @@
-#Thu Dec 19 16:42:55 PST 2024
-MAJOR=2
-MINOR=9
-PATCH=85
-VERSION_CODE=2984
+#Thu Dec 19 20:31:00 SGT 2024
+MAJOR=3
+MINOR=0
+PATCH=42
+VERSION_CODE=3041
