Fix a bug on the code that makes some offices crash. Added pinch zoom on the map

--- a/app/version.properties
+++ b/app/version.properties
@@ -1,5 +1,5 @@
-#Thu Dec 19 20:31:00 SGT 2024
+#Fri Dec 20 09:52:22 PST 2024
 MAJOR=3
 MINOR=0
-PATCH=42
-VERSION_CODE=3041
+PATCH=56
+VERSION_CODE=3055
